--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Movies#index</h1>
-<p>Find me in app/views/movies/index.html.erb</p>
+<h1><%= @category.name %></h1>
+
+<p>Check out all the <%= @category.name %> movies below!</p>
+
+<%= render @movies %>
